# data_quality_platform

./: .gitignore  README.md  pyproject.toml
src/: anomaly_detector.py  data_generator.py  data_profiler.py
